<resources>
    <string name="app_name">Marg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name <font color="#ff0000"><sup>*</sup></font></string>
    <string name="last_name">Last Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="signuppassword">Password</string>
    <string-array name="education">
        <item>Select Education</item>
        <item>Graduate</item>
        <item>Post graduate</item>
        <item>Professional</item>
        <item>Other</item>
    </string-array>
    <string name="male">Male</string>
    <string name="help_in_other_activity">Help in any other activity</string>
    <string name="date">Date</string>
    <string name="select_city">Select City *</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="reg_phone">Registered Phone Number</string>
    <string name="pin">Pin Code</string>
    <string name="create_acc">Create an Account</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="allready_have_an_account">Allready have an account?</string>
    <string name="forgot_password">Forgot password? Click here</string>
    <string name="create_an_account">Create your account.</string>
    <string name="logo">Logo</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="create_date">Create Date</string>
    <string name="modified_date">Modified Date</string>
    <string name="no_of_children">No Of Children</string>
    <string name="special_requirment">Special Requirment</string>
    <string name="tittle">Tittle</string>
    <string name="fname">First Name</string>
    <string name="middle">Middle Name</string>
    <string name="Last">Last Name</string>
    <string name="other">Other</string>
    <string name="others">Others</string>
    <string name="dob">DOB</string>
    <string name="yoj">Year Of Joining</string>
    <string name="action_logout">Log Out</string>
    <string name="save">Save</string>
    <string name="nivrittigurukul">Nivritti Gurukul</string>
    <string name="workshop">Workshop</string>
    <string name="gitadistribution">Gita Distribution</string>
    <string name="volunteering_starting_date">Volunteering Start Date</string>
    <string name="enter_starting_date">Enter your Volunteering start date</string>
    <string name="volunteering_ending_date">Volunteering End Date</string>
    <string name="enter_ending_date">Enter your Volunteering end date</string>
    <string name="selectproject">Project</string>
    <string name="number_of_persons_with_you_excluding_kids">Number Of Persons With You Excluding Kids</string>
    <string name="enter_number_of_persons_with_you">Enter number of persons with you</string>
    <string name="persons_s_name">Persons Name</string>
    <string name="enter_name_of_the_persons">Enter name of the persons</string>
    <string name="persons_s_gender">Persons Gender</string>
    <string name="relationship_with_person">Relationship With Person</string>
    <string name="number_of_kids_with_you">Number of Kids With You</string>
    <string name="check_in_date">Check In Date</string>
    <string name="enter_check_in_date">Enter check in date</string>
    <string name="check_in_time">Check In Time</string>
    <string name="enter_check_in_time">Enter check in time</string>
    <string name="edit">EDIT</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="departure_date">Departure Date</string>
    <string name="departure_time">Departure Time</string>
    <string name="origin_from">Origin From</string>
    <string name="ends_at">Ends At</string>
    <string name="starting_airportstation">Starting Airport/Station</string>
    <string name="ending_airportstation">Ending Airport/Station</string>
    <string name="allotted_calendar">Allotted Calendar</string>
    <string name="alloted_subject">Your Allotted Subject</string>
    <string name="topics_allotted">Topics Allotted</string>
    <string name="check_out_date">Check Out Date</string>
    <string name="enter_check_out_date">Enter check out date</string>
    <string name="check_out_time">Check Out Time</string>
    <string name="enter_check_out_time">Enter check out time</string>
    <string name="subject">Subject</string>
    <string name="topic">Topic</string>
    <string name="enter_subject_name">Enter subject name</string>
    <string name="enter_topic_name">Enter topic name</string>
    <string name="special_requirement">Comment to Approval</string>
    <string name="enter_special_requirement_if_any">Enter special requirement if any</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No Notification</string>
    <string name="home">Home</string>
    <string name="itienary">Itienary</string>
    <string name="volunteer">Volunteer</string>
    <string name="jivanmuktas">Jivanmuktas</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="menu_item">Menu</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="not_avail">Your Origin and End places are not yet allocated.Please contact your Administrator.</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="schedule">Schedule</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="username">Email Id *</string>
    <string name="password">Password *</string>
    <string name="reset_password">Reset Password</string>
    <string name="phone_number">Phone Number *</string>
    <string name="enter_valid_mobile_number">(CountryCode)-(CityCode)-MobileNumber *</string>
    <string name="enter_name">Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_password">Enter Password *</string>
    <string name="reenter_password">Re-Enter Password *</string>
    <string name="enterdob">Date of Birth *</string>
    <string name="age">Age</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email_id">Email Id *</string>
    <string name="enter_valid_email_id">Valid Email Id *</string>
    <string name="area">Satsang Chapter *</string>
    <string name="gender">Gender *</string>
    <string name="enter_postel_code">Enter Postal Code</string>
    <string name="postel_code">Postal Code</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="select_date">Select Date</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="chapter">Satsang Chapter </string>
    <string-array name="country">
        <item>Select Country</item>
        <item>Bahrain</item>
        <item>Dubai</item>
        <item>India - ex Mumbai</item>
        <item>Indonesia</item>
        <item>Mumbai</item>
        <item>Muscat</item>
        <item>Singapore</item>
        <item>Thailand</item>
        <item>USA</item>
    </string-array>
    <string name="selectcountry">Select Country *</string>
    <string name="enter_the_year_you_join">Enter The Year You Join</string>
    <string name="comment">Comment To Approver</string>
    <string name="sorrynodata">Sorry no data found. Please contact administrator</string>
    <string name="dialog_sync">You logged in for the first time. You need to sync the app.</string>
    <string name="Sync_Required">Your app has not synced since last 24 hours please sync before you proceed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">Jivanmukta derived from the Sanskrit words \'Jiva\' (soul) and \'Mukti\' (liberation) Just like the body changes clothes everyday, the soul takes new bodies every birth. The divine aspect of the soul is in its immortality, timelessness, self-knowledge as well as the ability to experience itself, both as dual and non-dual. Spirituality is not something that needs to be pursued only when we get ?old? or we having nothing \'better\' to do. It is the only way of life. \n\n

Tulasidas said "Binu satsang viveka nahin Rama kripa binu satsang naahi....." With this firm faith, our journey started in 1981. Through the last 3 decades it has spread its wings across the world. Param Pujya Gurudev who has not only championed learning of a variety of scriptures but have inspired to live that knowledge. One who has firmly advocated that the knowledge has to transpire into living. Gurudev talks the walk. His teachings are through his living. The talks and writings are merely a reflection of the living. A role model and inspiration who magnetically attracts all who come across by his expression of love. Once experienced it is yearned for? This website is an expression of such love. An open invitation to all to experience this. \n\n

Our Satsang started 35 years ago and over the last decade has grown into a truly global Satsang. 
Please write to us at Jivanmuktas.global@gmail.com\n\n\n</string>
</resources>