<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_user_profile"
        android:orderInCategory="200"
        android:title="@string/profile"
        app:showAsAction="always"
        android:icon="@drawable/myprofile1"/>
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="200"
        android:title="@string/notification"
        app:showAsAction="always"
        android:icon="@drawable/notification"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/log_out"
        android:orderInCategory="202"
        android:title="@string/logout"
        app:showAsAction="always" />
</menu>